--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,11 +1,12 @@
 .user-cards {
-  width: 50px;
-  height: 70px;
+  width: 60px;
+  height: 85px;
   box-shadow: 0px 1px 5px grey;
 }
 
 
 .board-card {
-  width: 50px;
-  height: 70px;
+  width: 80px;
+  height: 115px;
+  margin: 10px
 }
