card back, visual improved

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,14 @@
-.user-cards {
-  width: 60px;
-  height: 85px;
+.user-cards-1 {
+  margin-right: -20px;
+  width: 80px;
+  height: 110px;
+  box-shadow: 0px 1px 5px grey;
+}
+
+.user-cards-2 {
+  margin-left: -20px;
+  width: 80px;
+  height: 110px;
   box-shadow: 0px 1px 5px grey;
 }
 
