--- a/app/assets/stylesheets/components/_poker-table.scss
+++ b/app/assets/stylesheets/components/_poker-table.scss
@@ -12,7 +12,6 @@
 
 .position-0 {
   position: absolute;
-	border: 2px dotted #000000;
 	top: 80%;
   right: 42%;
 }
@@ -20,44 +19,46 @@
 
 .position-5 {
   position: absolute;
-	border: 2px dotted #000000;
 	top: 55%;
   right: 0%;
 }
 
 .position-4{
   position: absolute;
-	border: 2px dotted #000000;
   bottom: 62%;
   right: 0%;
 }
 
 .position-3{
   position: absolute;
-	border: 2px dotted #000000;
   bottom: 80%;
   right: 42%;
 }
 
 .position-2{
   position: absolute;
-	border: 2px dotted #000000;
   bottom: 62%;
   right: 84%;
 }
 
 .position-1{
   position: absolute;
-	border: 2px dotted #000000;
   top: 55%;
   right: 84%;
 }
+
 .player-card {
-  width: 150px;
-  padding: 20px;
+  width: auto;
+  height: 60px;
+  padding: 5px;
   border-radius: 5px;
-  box-shadow: 1px 1px 12px green;
   background-color: white;
+  margin-top: -70px;
+  position: relative;
+}
+
+.player-infos {
+  width: 20%;
 }
 
 .games-show {
