--- a/app/assets/stylesheets/components/_poker-table.scss
+++ b/app/assets/stylesheets/components/_poker-table.scss
@@ -20,18 +20,18 @@
 .position-5 {
   position: absolute;
 	top: 55%;
-  right: 0%;
+  right: -4%;
 }
 
 .position-4{
   position: absolute;
   bottom: 62%;
-  right: 0%;
+  right: -4%;
 }
 
 .position-3{
   position: absolute;
-  bottom: 80%;
+  bottom: 90%;
   right: 42%;
 }
 
@@ -55,6 +55,7 @@
   background-color: white;
   margin-top: -70px;
   position: relative;
+  box-shadow: 0px 1px 5px black;
 }
 
 .player-infos {
