--- a/app/assets/stylesheets/components/_poker-table.scss
+++ b/app/assets/stylesheets/components/_poker-table.scss
@@ -1,6 +1,6 @@
 .poker-table {
   position: relative;
-  border: 2px dotted #000000;
+  border: 2px solid #323232;
   border-radius: 50%;
   width: 100%;
   height: 65vh;
@@ -8,43 +8,44 @@
   justify-content:center;
   align-items:center;
   background-color: green;
+  box-shadow: 0px 1px 5px black;
 }
 
 .position-0 {
   position: absolute;
 	top: 80%;
-  right: 42%;
+  right: 40%;
 }
 
 
 .position-5 {
   position: absolute;
 	top: 55%;
-  right: -4%;
+  right: -8%;
 }
 
 .position-4{
   position: absolute;
   bottom: 62%;
-  right: -4%;
+  right: -8%;
 }
 
 .position-3{
   position: absolute;
   bottom: 90%;
-  right: 42%;
+  right: 40%;
 }
 
 .position-2{
   position: absolute;
   bottom: 62%;
-  right: 84%;
+  right: 88%;
 }
 
 .position-1{
   position: absolute;
   top: 55%;
-  right: 84%;
+  right: 88%;
 }
 
 .player-card {
@@ -53,7 +54,7 @@
   padding: 5px;
   border-radius: 5px;
   background-color: white;
-  margin-top: -50px;
+  margin-top: -56px;
   position: relative;
   box-shadow: 0px 1px 5px black;
 }
@@ -64,4 +65,75 @@
 
 .games-show {
   background-color: rgba($color: #000000, $alpha: 0.2);
+}
+
+.position-0 .button {
+  position: absolute;
+	top: -6%;
+  right: 104%;
+  border-radius: 50%;
+  box-shadow: 0px 1px 5px black;
+  height: 30px;
+  width: 30px;
+  background-color: rgb(195, 195, 195);
+}
+
+.position-1 .button {
+  position: absolute;
+	top: 40%;
+  right: -20%;
+  border-radius: 50%;
+  box-shadow: 0px 1px 5px black;
+  height: 30px;
+  width: 30px;
+  background-color: rgb(195, 195, 195);
+}
+
+.position-2 .button {
+  position: absolute;
+	top: -6%;
+  right: -20%;
+  border-radius: 50%;
+  box-shadow: 0px 1px 5px black;
+  height: 30px;
+  width: 30px;
+  background-color: rgb(195, 195, 195);
+}
+
+.position-3 .button {
+  position: absolute;
+	top: 40%;
+  right: -20%;
+  border-radius: 50%;
+  box-shadow: 0px 1px 5px black;
+  height: 30px;
+  width: 30px;
+  background-color: rgb(195, 195, 195);
+}
+
+.position-4 .button {
+  position: absolute;
+	top: -6%;
+  right: 104%;
+  border-radius: 50%;
+  box-shadow: 0px 1px 5px black;
+  height: 30px;
+  width: 30px;
+  background-color: rgb(195, 195, 195);
+}
+
+.position-5 .button {
+  position: absolute;
+	top: 40%;
+  right: 104%;
+  border-radius: 50%;
+  box-shadow: 0px 1px 5px black;
+  height: 30px;
+  width: 30px;
+  background-color: rgb(195, 195, 195);
+}
+
+.button-spade {
+  width: 20px;
+  height: 20px
 }
