--- a/app/assets/stylesheets/components/_board-card.scss
+++ b/app/assets/stylesheets/components/_board-card.scss
@@ -1,9 +1,18 @@
 .board-cards {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.inner-table {
   height: 200px;
   width: 600px;
   border: 4px solid rgba($color: #ffffff, $alpha: 0.5);
   border-radius: 100px;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+}
+
+.pot {
+  text-align: center;
+  color: white;
+  margin-top: 10px;
 }
