--- a/app/assets/stylesheets/components/_board-card.scss
+++ b/app/assets/stylesheets/components/_board-card.scss
@@ -12,7 +12,12 @@
 }
 
 .pot {
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  padding: 5px 10px;
   color: white;
   margin-top: 10px;
+  border-radius: 20px;
+  background-color: rgb(0, 93, 25);
 }
