back pot info complete

--- a/app/assets/stylesheets/components/_board-card.scss
+++ b/app/assets/stylesheets/components/_board-card.scss
@@ -14,10 +14,11 @@
 .pot {
   margin-left: auto;
   margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 8px;
   width: fit-content;
   padding: 5px 10px;
   color: white;
-  margin-top: 10px;
   border-radius: 20px;
   background-color: rgb(0, 93, 25);
 }
