--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -19,6 +19,14 @@
   margin: 0px 10px;
 }
 
+.empty-card {
+  width: 80px;
+  height: 115px;
+  margin: 0px 10px;
+}
+
+
+
 .transparent {
   margin-right: -20px;
   width: 80px;
