--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -135,11 +135,26 @@
 <% if @user == @current_hand.better %>
   <div class="betting-wrapper">
     <% if !@user_last_bet || @user_last_bet.amount < @hand_last_bet.amount %>
-    <div>
-      <%= link_to "Fold", game_hand_user_hand_path(@game, @current_hand, @current_player_user_hand), method: :put, class: "btn btn-danger" %>
-    </div>
+      <div>
+        <%= link_to "Fold", game_hand_user_hand_path(@game, @current_hand, @current_player_user_hand), method: :put, class: "btn btn-danger" %>
+      </div>
     <% end %>
-
+    <% if @user_last_bet.amount == @hand_last_bet.amount %>
+      <div>
+        <p>Check</p>
+      </div>
+      <div>
+        <p>Bet</p>
+      </div>
+    <% end %>
+    <% if @user_last_bet.amount < @hand_last_bet.amount %>
+      <div>
+        <p>Call</p>
+      </div>
+      <div>
+        <p>Raise</p>
+      </div>
+    <% end %>
     <div class="betting">
       <%= simple_form_for [@game, @current_hand, @bet] do |f| %>
         <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: 1, max:30, step: 1, value: 5 } %> <span id="result"></span>
