betting options complete

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -12,3 +12,22 @@
     color: white;
   }
 }
+
+.raise-button {
+  margin-bottom: -30px;
+  padding-bottom: 24px;
+  width: 100px;
+}
+
+.raise-amount {
+  width: 100px;
+  text-align: center;
+}
+
+.call-button {
+  border: none;
+  background-color: blue;
+  color: white;
+  padding: 10px 20px;
+  margin: 0
+}
