display buttons started

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -31,3 +31,18 @@
   padding: 10px 20px;
   margin: 0
 }
+
+.call {
+  display: flex;
+  align-items: flex-end
+}
+
+.fold {
+  display: flex;
+  align-items: flex-end
+}
+
+.check {
+  display: flex;
+  align-items: flex-end
+}
