--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -135,12 +135,12 @@
 <% if @user == @current_hand.better %>
   <div class="betting-wrapper d-flex">
     <% if !@user_last_bet || @user_last_bet.amount < @hand_last_bet.amount %>
-      <div>
+      <div class="fold">
         <%= link_to "Fold", game_hand_user_hand_path(@game, @current_hand, @current_player_user_hand), method: :put, class: "btn btn-danger me-3" %>
       </div>
     <% end %>
     <% if @user_last_bet && @user_last_bet.amount == @hand_last_bet.amount %>
-      <div>
+      <div class="check">
         <%= link_to "Check", game_hand_path(@game, @current_hand), method: :put, class: "btn btn-success me-3" %>
       </div>
       <div class="raise">
