--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -136,16 +136,16 @@
   <div class="betting-wrapper d-flex">
     <% if !@user_last_bet || @user_last_bet.amount < @hand_last_bet.amount %>
       <div class="fold">
-        <%= link_to "Fold", game_hand_user_hand_path(@game, @current_hand, @current_player_user_hand), method: :put, class: "btn btn-danger me-3" %>
+        <%= link_to "Fold", game_hand_user_hand_path(@game, @current_hand, @current_player_user_hand), method: :put, class: "action-button" %>
       </div>
     <% end %>
     <% if @user_last_bet && @user_last_bet.amount == @hand_last_bet.amount %>
       <div class="check">
-        <%= link_to "Check", game_hand_path(@game, @current_hand), method: :put, class: "btn btn-success me-3" %>
+        <%= link_to "Check", game_hand_path(@game, @current_hand), method: :put, class: "action-button" %>
       </div>
       <div class="raise">
         <%= simple_form_for [@game, @current_hand, @bet] do |f| %>
-          <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: @min_raise, max:30, step: 1, value: @min_raise } %>
+          <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: @min_raise, max:30, step: 1, value: @min_raise }, class: "betting-range" %>
           <%= f.submit "Raise to", class:"raise-button me-3" %>
           <div class="raise-amount"><span id="result"><%= @min_raise %></span><span>€</span></div>
         <% end %>
@@ -156,15 +156,15 @@
         <%= simple_form_for [@game, @current_hand, @bet] do |f| %>
           <%= f.input_field :amount, label: false, value: @hand_last_bet.amount, :as => :hidden %>
           <% if @user_last_bet %>
-            <%= f.submit "Call #{@hand_last_bet.amount - @user_last_bet.amount}€", class:"call-button me-3" %>
+            <%= f.submit "Call #{@hand_last_bet.amount - @user_last_bet.amount}€", class:"action-button" %>
           <% else %>
-            <%= f.submit "Call #{@hand_last_bet.amount}€", class:"call-button me-3" %>
+            <%= f.submit "Call #{@hand_last_bet.amount}€", class:"action-button" %>
           <% end %>
         <% end %>
       </div>
       <div class="raise">
         <%= simple_form_for [@game, @current_hand, @bet] do |f| %>
-          <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: @min_raise, max:30, step: 1, value: @min_raise } %>
+          <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: @min_raise, max:30, step: 1, value: @min_raise }, class: "betting-range" %>
           <%= f.submit "Raise to", class:"raise-button me-3" %>
           <div class="raise-amount"><span id="result"><%= @min_raise %></span><span>€</span></div>
         <% end %>
