--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -56,7 +56,7 @@
           </div>
         <% end %>
       </div>
-      <div class="player-card <%= 'current-better' if @current_hand.better == user %> d-flex justify-content-around align-items-center">
+      <div class="player-card <%= 'current-better' if @current_hand && @current_hand.better == user %> d-flex justify-content-around align-items-center">
         <div class= "d-flex justify-content-around flex-grow-1">
           <h3 class="text-center mb-0"><%= user.pseudo %></h3>
           <div class="d-flex justify-content-center align-items-center" >
@@ -130,7 +130,7 @@
   </div>
 </div>
 
-<% if @user == @current_hand.better %>
+<% if @current_hand && @user == @current_hand.better %>
   <div class="betting-wrapper d-flex">
     <% if !@user_last_bet || @user_last_bet.amount < @hand_last_bet.amount %>
       <div class="fold">
@@ -141,15 +141,16 @@
       <div class="check">
         <%= link_to "Check", game_hand_path(@game, @current_hand), method: :put, class: "action-button" %>
       </div>
-      <div class="raise">
-        <%= simple_form_for [@game, @current_hand, @bet] do |f| %>
-          <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: @min_raise, max:30, step: 1, value: @min_raise }, class: "betting-range" %>
-          <%= f.submit "Raise to", class:"raise-button me-3" %>
-          <div class="raise-amount"><span id="result"><%= @min_raise %></span><span>€</span></div>
-        <% end %>
-      </div>
-    <% end %>
-    <% if @hand_last_bet.amount > @current_hand.bets.first.amount || @current_hand.bets.count == 2 %>
+      <% unless @hand_last_bet.amount == 30 %>
+        <div class="raise">
+          <%= simple_form_for [@game, @current_hand, @bet] do |f| %>
+            <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: @min_raise, max:30, step: 1, value: @min_raise }, class: "betting-range" %>
+            <%= f.submit "Raise to", class:"raise-button me-3" %>
+            <div class="raise-amount"><span id="result"><%= @min_raise %></span><span>€</span></div>
+          <% end %>
+        </div>
+      <% end %>
+    <% elsif @hand_last_bet.amount > @current_hand.bets.first.amount || @current_hand.bets.count == 2 %>
       <div class="call">
         <%= simple_form_for [@game, @current_hand, @bet] do |f| %>
           <%= f.input_field :amount, label: false, value: @hand_last_bet.amount, :as => :hidden %>
@@ -160,13 +161,15 @@
           <% end %>
         <% end %>
       </div>
-      <div class="raise">
-        <%= simple_form_for [@game, @current_hand, @bet] do |f| %>
-          <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: @min_raise, max:30, step: 1, value: @min_raise }, class: "betting-range" %>
-          <%= f.submit "Raise to", class:"raise-button me-3" %>
-          <div class="raise-amount"><span id="result"><%= @min_raise %></span><span>€</span></div>
-        <% end %>
-      </div>
+      <% unless @hand_last_bet.amount == 30 %>
+        <div class="raise">
+          <%= simple_form_for [@game, @current_hand, @bet] do |f| %>
+            <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: @min_raise, max:30, step: 1, value: @min_raise }, class: "betting-range" %>
+            <%= f.submit "Raise to", class:"raise-button me-3" %>
+            <div class="raise-amount"><span id="result"><%= @min_raise %></span><span>€</span></div>
+          <% end %>
+        </div>
+      <% end %>
     <% end %>
   </div>
 <% end %>
