--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -73,6 +73,7 @@
             <%= image_tag "casino-chip.png", class: "casino-chip" %>
             <p><%= @current_hand.bets.where(user: user).last.amount %>€</p>
           </div>
+          <%= raise %>
         <% end %>
       </div>
      <% player_position += 1 %>
