--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -82,7 +82,10 @@
           </div>
         <% end %>
       </div>
-     <% player_position += 1 %>
+      <% player_position += 1 %>
+      <div class="d-flex justify-content-center">
+        <p class="hand-strength"><%= UserHand.where(user: user, hand: @current_hand)[0].rank %></p>
+      </div>
     </div>
   <% end %>
   <div>
