--- a/app/assets/stylesheets/components/_poker-table.scss
+++ b/app/assets/stylesheets/components/_poker-table.scss
@@ -252,6 +252,14 @@ height: 22px;
 }
 
 .hand-strength {
-  width: fit-content;
+  width: 60%;
   color: white;
+  border: 1px solid grey;
+  border-radius: 0px 0px 10px 10px;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 2px 5px;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  margin-top: -2px;
 }
