--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -83,9 +83,16 @@
         <% end %>
       </div>
       <% player_position += 1 %>
-      <div class="d-flex justify-content-center">
-        <p class="hand-strength"><%= UserHand.where(user: user, hand: @current_hand)[0].rank %></p>
-      </div>
+      <% if @in_hand_players.include?(user) && @current_hand.flop_cards.count == 3 %>
+        <div class="d-flex justify-content-center">
+          <p class="hand-strength"><%= UserHand.where(user: user, hand: @current_hand)[0].rank %></p>
+        </div>
+      <% else %>
+        <div class="d-flex justify-content-center">
+        <p class="empty-hand-strength">
+        </p>
+        </div>
+      <% end %>
     </div>
   <% end %>
   <div>
