--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -52,8 +52,8 @@
             </div>
           <% else %>
             <div class="text-center d-flex justify-content-center">
-              <%= image_tag "card_back.png", class: "user-cards-1" %>
-              <%= image_tag "card_back.png", class: "user-cards-2" %>
+              <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1" %>
+              <%= image_tag "#{@current_hand.user_cards.where(user: user)[1].deck_card.url}", class: "user-cards-2" %>
             </div>
           <% end %>
         <% else %>
