style improvement complete

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,6 @@
 // Specific CSS for your home-page
 .content-wrapper {
   min-height: calc(100vh - 90px - 80px);
+  padding-right: 3%;
+  padding-left: 3%;
 }
