--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -39,7 +39,7 @@
     <% end %>
     <div class="player-infos position-<%=player_position%>">
       <div class="player-cards-wrapper">
-        <% if (user == @user && @in_hand_players.include?(user)) || () %>
+        <% if (user == @user && @in_hand_players.include?(user)) %>
           <div class="text-center d-flex justify-content-center">
             <%= image_tag "#{@current_hand.user_cards.where(user: @user)[0].deck_card.url}", class: "user-cards-1" %>
             <%= image_tag "#{@current_hand.user_cards.where(user: @user)[1].deck_card.url}", class: "user-cards-2" %>
@@ -63,6 +63,9 @@
           </div>
         <% end %>
       </div>
+      <div class="percentage" id="<%= 'current-winner' if @current_winners && @current_winners.include?(user) %>">
+        <%= UserHand.where(user: user, hand: @current_hand)[0].odds %>
+      </div>
       <div class="player-card <%= 'current-better' if @current_hand && @current_hand.better == user && @current_hand.flop_cards.count == 0 %> d-flex justify-content-around align-items-center">
         <div class= "d-flex justify-content-around flex-grow-1">
           <h3 class="text-center mb-0"><%= user.pseudo %></h3>
@@ -85,7 +88,7 @@
       <% player_position += 1 %>
       <% if @in_hand_players.include?(user) && @current_hand.flop_cards.count == 3 %>
         <div class="d-flex justify-content-center">
-          <p class="hand-strength"><%= UserHand.where(user: user, hand: @current_hand)[0].rank %> <%= UserHand.where(user: user, hand: @current_hand)[0].odds %></p>
+          <p class="hand-strength"><%= UserHand.where(user: user, hand: @current_hand)[0].rank %></p>
         </div>
       <% else %>
         <div class="d-flex justify-content-center">
