--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -63,9 +63,11 @@
           </div>
         <% end %>
       </div>
-      <div class="percentage" id="<%= 'current-winner' if @current_winners && @current_winners.include?(user) %>">
-        <%= UserHand.where(user: user, hand: @current_hand)[0].odds %>
-      </div>
+      <% if  UserHand.where(user: user, hand: @current_hand)[0] %>
+        <div class="percentage" id="<%= 'current-winner' if @current_winners && @current_winners.include?(user) %>">
+          <%= UserHand.where(user: user, hand: @current_hand)[0].odds %>
+        </div>
+      <% end %>
       <div class="player-card <%= 'current-better' if @current_hand && @current_hand.better == user && @current_hand.flop_cards.count == 0 %> d-flex justify-content-around align-items-center">
         <div class= "d-flex justify-content-around flex-grow-1">
           <h3 class="text-center mb-0"><%= user.pseudo %></h3>
