--- a/app/assets/stylesheets/components/_game-infos.scss
+++ b/app/assets/stylesheets/components/_game-infos.scss
@@ -21,3 +21,17 @@
   background: rgb(158, 0, 0);
   color: white;
 }
+
+.btn-flat {
+  color: white;
+  padding: 4px 12px;
+  border-radius: 4px;
+  background: #00ad5f;
+  transition: background 0.3s ease;
+  font-size: smaller;
+}
+
+.btn-flat:hover {
+  background: #008001;
+  color: white;
+}
