--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -168,8 +168,8 @@
       </div>
       <% unless @hand_last_bet.amount == 30 %>
         <div class="raise">
-          <%= simple_form_for [@game, @current_hand, @bet] do |f| %>
-            <%= f.input :amount, label: false, as: :range, input_html: { id: 'amount', min: @min_raise, max:30, step: 1, value: @min_raise }, class: "betting-range" %>
+          <%= form_for [@game, @current_hand, @bet] do |f| %>
+            <%= f.range_field :amount, min: @min_raise, max:30, step: 1, value: @min_raise, id: 'amount', class: "betting-range" %> <br>
             <%= f.submit "Raise to", class:"raise-button me-3" %>
             <div class="raise-amount"><span id="result"><%= @min_raise %></span><span>€</span></div>
           <% end %>
